# hello-cross-platform-mobile

./: README.md
go/hello_android/: build.gradle
go/hello_ios/hello_ios/: AppDelegate.swift  ViewController.swift
go/hello_ios/hello_ios.xcodeproj/: project.pbxproj
go/hello_ios/hello_ios/Base.lproj/: Main.storyboard
go/hello_ios/hello_iosTests/: hello_iosTests.swift
go/hello_ios/hello_iosUITests/: hello_iosUITests.swift
hello_android/app/: build.gradle
hello_android/gradle/wrapper/: gradle-wrapper.properties
hello_go/: hello.go
hellow/app/src/main/: AndroidManifest.xml
kotlin/: build.gradle
kotlin/SharedCode/: build.gradle.kts
kotlin/app/: build.gradle
kotlin/app/src/main/: AndroidManifest.xml
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/native/KotlinIOS/KotlinIOS/: AppDelegate.swift  ViewController.swift
kotlin/native/KotlinIOS/KotlinIOS.xcodeproj/: project.pbxproj
kotlin/native/KotlinIOS/KotlinIOSTests/: KotlinIOSTests.swift
kotlin/native/KotlinIOS/KotlinIOSUITests/: KotlinIOSUITests.swift
rust/: cargo-config.toml
rust/android/app/: build.gradle
rust/android/gradle/wrapper/: gradle-wrapper.properties
rust/cargo/: Cargo.toml
rust/cargo/src/: hello.h  lib.rs
rust/ios/HelloWorld/: Hello-Bridging-Header.h  RustApi.swift  RustHello.swift  api.h
rust/ios/HelloWorld/HelloWorld/: AppDelegate.swift  ViewController.swift
rust/ios/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
rust/ios/HelloWorld/HelloWorldTests/: HelloWorldTests.swift
rust/ios/HelloWorld/HelloWorldUITests/: HelloWorldUITests.swift
(+23 files in other folders)
